Fixes layout .container style collapsing in small viewports by setting width to 100%

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -24,7 +24,7 @@
   }
 
   @media (max-width: $screen-sm) {
-    width: unset;
+    width: 100%;
   }
 
   @media (max-width: $screen-xs) {
